--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,11 @@
       <title>App Name</title>
 
       <link rel="stylesheet" href="/css/main.css">
+
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
     <style>
         body{
@@ -29,17 +32,53 @@
             margin: 10px !important;
         } 
 
-        .noOverflowHidden {
+        .searchSection {
             overflow: visible;
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 20px;
+            display: flex;
+            justify-content: space-around;
+
         }
         
+        .nameInput {
+            width: 100px !important;
 
+            height: 30px !important;
+            margin: 30px 0 30px 0 !important;
+                    border: 1px solid #ccc !important;
+        border-radius: 4px !important;
+        font-family: 'Pontano Sans', sans-serif;
+        padding: 2px 8px !important;
+        }
+        .nameInput:focus{
+                outline: none;
+    border: 1px solid #26a69a !important;
+        }
 
+        .searchButton {
+                        margin: 30px 0 30px 0 !important;
+
+        }
+
+        .card-title{
+            color: black !important;
+        }
         /***** Calendar ****/
+
+
         .input-calendar {
     font-family: 'Pontano Sans', sans-serif;
-    width: 175px;
-    position: relative;
+/*    width: 175px;
+*/    position: relative;
+    display: inline-block; 
+}
+.input-calendar-value {
+    height: 30px !important;
+            margin: 30px 0 30px 0 !important;
+    font-size: 14px;
 }
 
 .input-calendar-wrapper {
@@ -59,17 +98,16 @@
 }
 
 .input-calendar .input-calendar-value {
-    width: 120px;
+    width: 100px !important;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-family: 'Pontano Sans', sans-serif;
-    font-size: 16px;
     padding: 2px 8px;
 }
 
 .input-calendar .input-calendar-value:focus {
     outline: none;
-    border: 1px solid #f39c12;
+    border: 1px solid #26a69a !important;
 }
 
 .input-calendar .calendar-icon {
