--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
             margin-top: 20px;
             flex-wrap: wrap;
         }
-        .staffCard {
+        .staffProfileCard {
             width: 200px;
             margin: 10px !important;
         } 
@@ -65,6 +65,19 @@
 
         .card-title{
             color: black !important;
+        }
+
+        .staffTimeCard{
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 30px;
+            padding: 20px;
+            font-size: 20px
+        }
+
+        .number {
+            color: #26a69a;
         }
         /***** Calendar ****/
 
